# sori

./: Makefile  README.md  go.mod  main.go  play.go  pyproject.toml
sori/: main.py  player.py
