[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sori"
description = "A powerful ambient music player."
readme = "README.md"
keywords = ["music", "sound", "audio"]
license = {file="LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dependencies = []
dynamic = ["version"]

[project.scripts]
sori = "sori.main:main"